--- a/components/footer.html
+++ b/components/footer.html
@@ -4,8 +4,8 @@
         <div class="footer__content">
             <div class="footer__section">
                                 <div class="footer__brand">
-                    <img src="images/logo.png" alt="Innovation Tech Solutions Logo" class="footer__logo">
-                    <span class="footer__brand-name">Innovation Tech Solutions</span>
+                    <img src="images/logo.png" alt="Innovative Tech Solutions Logo" class="footer__logo">
+                    <span class="footer__brand-name">Innovative Tech Solutions</span>
                 </div>
                 <p class="footer__description">
                     Transforming businesses through innovative IT solutions and cutting-edge technology.
@@ -92,7 +92,7 @@
         </div>
 
         <div class="footer__bottom">
-            <p>&copy; 2024 Innovation Tech Solutions. All rights reserved.</p>
+            <p>&copy; 2024 Innovative Tech Solutions. All rights reserved.</p>
             <div class="footer__legal">
                 <a href="privacy-policy.html" class="footer__link">Privacy Policy</a>
                 <a href="terms-of-service.html" class="footer__link">Terms of Service</a>
