--- a/components/hero.html
+++ b/components/hero.html
@@ -5,7 +5,7 @@
             <div class="hero__text">
                 <h1 class="hero__title">
                     Transform Your Business with 
-                    <span class="hero__title-gradient">Innovation Tech Solutions</span>
+                    <span class="hero__title-gradient">Innovative Tech Solutions</span>
                 </h1>
                 <p class="hero__description">
                     We deliver cutting-edge IT solutions that drive innovation, enhance efficiency, 
